Fix z-indexes

--- a/src/app.css
+++ b/src/app.css
@@ -54,8 +54,9 @@ label {
 
 /* Dialog prompt */
 .md-dialog-container {
-  z-index: 1002;
+  z-index: 1200;
 }
+
 .md-dialog {
   background-color: #161b3f !important;
   /*
@@ -772,6 +773,7 @@ textarea {
   bottom: 56px;
   left: 0;
   right: 0;
+  z-index: 1099;
 }
 
 #loader {
@@ -779,13 +781,13 @@ textarea {
   top: 45%;
   width: 100%;
   text-align: center;
-  z-index: 200;
+  z-index: 1100;
 }
 
 .bottom-bar {
   position: fixed;
   bottom: 0;
-  z-index: 1000;
+  z-index: 1100;
 }
 
 .bottom-bar .simulation-param {
@@ -804,7 +806,7 @@ textarea {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1001;
+  z-index: 1200;
 }
 
 .simulation-method-container .md-select-value {
@@ -818,7 +820,7 @@ textarea {
 .md-snackbar {
   margin-bottom: 55px !important;
   opacity: .9;
-  z-index: 999;
+  z-index: 1098;
 }
 
 .model-summary {
